--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,6 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   --font-montserrat: "Montserrat", sans-serif;
@@ -11,11 +13,11 @@
   font-style: normal;
   font-display: swap;
 }
+
 body {
   font-family: var(--font-montserrat), sans-serif;
-  background: #171c28;
-  color: #fff;
 }
+
 .monsieur-la-doulaise-regular {
   font-family: "Monsieur La Doulaise", cursive;
 }
@@ -26,28 +28,4 @@ html {
   margin: 0;
   padding: 0;
   width: 100%;
-}
-
-@keyframes wave {
-  0% {
-    transform: rotate(0deg);
-  }
-  15% {
-    transform: rotate(14deg);
-  }
-  30% {
-    transform: rotate(-8deg);
-  }
-  45% {
-    transform: rotate(14deg);
-  }
-  60% {
-    transform: rotate(-4deg);
-  }
-  75% {
-    transform: rotate(10deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
 }
